backup/masterpackage-retrieve/unpackaged/unpackaged/objects/Debit_Order__c.object
<CustomObject>
    <description>This object represent the debit order detail related to a Debit Order Switch for the Conversion team.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>Case Record Id related to the Debit Order Detail record</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Debit_Order_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FD Debit Order Switch</fullName>
                </value>
                <value>
                    <fullName>WS debit Order Switch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmation_Cause_Code__c</fullName>
        <label>Confirmation Cause Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Closed</fullName>
                </value>
                <value>
                    <fullName>Account Handover/Debt Review</fullName>
                </value>
                <value>
                    <fullName>Action Required From Client</fullName>
                </value>
                <value>
                    <fullName>Bank Details Already Updated</fullName>
                </value>
                <value>
                    <fullName>Cash payer customer</fullName>
                </value>
                <value>
                    <fullName>Client Not Contactable</fullName>
                </value>
                <value>
                    <fullName>Client Not Interested</fullName>
                </value>
                <value>
                    <fullName>Client to Contact DOI</fullName>
                </value>
                <value>
                    <fullName>Confirmation via SMS Required</fullName>
                </value>
                <value>
                    <fullName>Debit Order/Policy Cancelled</fullName>
                </value>
                <value>
                    <fullName>Details Not Found/Invalid Details</fullName>
                </value>
                <value>
                    <fullName>No active debit orders</fullName>
                </value>
                <value>
                    <fullName>Paid up</fullName>
                </value>
                <value>
                    <fullName>Policy lapsed/frozen</fullName>
                </value>
                <value>
                    <fullName>Successfully Confirmed</fullName>
                </value>
                <value>
                    <fullName>Confirmation via email required</fullName>
                    <isActive>false</isActive>
                    <label>Confirmation via email required</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOI_Sub_Name__c</fullName>
        <label>DOI Sub Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DO_Issue__c</fullName>
        <label>DO Issue</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reference number unclear</fullName>
                </value>
                <value>
                    <fullName>Incomplete reference number</fullName>
                </value>
                <value>
                    <fullName>Invalid Reference number</fullName>
                </value>
                <value>
                    <fullName>Invalid or incomplete debit order info</fullName>
                </value>
                <value>
                    <fullName>No amount provided</fullName>
                </value>
                <value>
                    <fullName>Client unreachable/ no response</fullName>
                </value>
                <value>
                    <fullName>Requested Debit order does not reflect on the statement</fullName>
                </value>
                <value>
                    <fullName>DOA missing</fullName>
                </value>
                <value>
                    <fullName>DOA invalid</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Debit_OrderDate__c</fullName>
        <label>Debit Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Debit_Order_Date__c</fullName>
        <label>Debit Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Debit_Order_Initiator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DOI Name</label>
        <referenceTo>Debit_Order_Initiator__c</referenceTo>
        <relationshipLabel>Debit Orders</relationshipLabel>
        <relationshipName>Debit_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Debit_Order_Initiator_ID__c</fullName>
        <label>External Debit Order Initiator ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Debit_Order_Initiator_Name__c</fullName>
        <label>External Debit Order Initiator Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Account_Formula__c</fullName>
        <formula>Case__r.Conversion__r.Old_Account_Number__c</formula>
        <label>From Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Account__c</fullName>
        <label>From Account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Debit_Orders__c</fullName>
        <label>No of Debit Orders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_yet_onboarded__c</fullName>
        <label>DOI not Onboarded</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Debit_Order_Issue__c</fullName>
        <label>Other Debit Order Issue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Comms__c</fullName>
        <label>Preferred Comms</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submission_Date__c</fullName>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submitted_Cause_Code__c</fullName>
        <label>Submitted Cause Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client to Action</fullName>
                </value>
                <value>
                    <fullName>No Client Action</fullName>
                    <default>true</default>
                    <label>No Client Action</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TECH_CB_To_Email__c</fullName>
        <formula>IF(
    TEXT(Debit_Order_Initiator__r.Preferred_Comms__c) = &apos;CB To Email&apos;,
    TRUE,
    FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CB To Email?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_Capitec_Account__c</fullName>
        <label>To Capitec Account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Withdrawn_Cause_Code__c</fullName>
        <label>Withdrawn Cause Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agent Capturing Error</fullName>
                </value>
                <value>
                    <fullName>Branch advised to ignore request</fullName>
                </value>
                <value>
                    <fullName>Client cancelled request</fullName>
                </value>
                <value>
                    <fullName>Client requested to switch for next month</fullName>
                </value>
                <value>
                    <fullName>Employer does not accept Capitec Banking details</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Debit Order</label>
    <nameField>
        <label>DO Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Debit Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Amount_cannot_be_negative</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
   NOT(ISBLANK(Amount__c)),  
   Amount__c &lt;= 0
)</errorConditionFormula>
        <errorMessage>Amount must be greater than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Confirmed_Cause_Code_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    NOT(ISNEW()), 
    ISPICKVAL(Case__r.Status, &quot;Submitted&quot;),
    ISBLANK(TEXT(Confirmation_Cause_Code__c))
)</errorConditionFormula>
        <errorMessage>Please enter Confirmation Cause Code before saving.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Debit_Issue_Field_is_blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
				NOT($Setup.Bypass_Configurations__c.Bypass_Validation_Rules__c),
    INCLUDES(DO_Issue__c, &quot;Other&quot;),
    ISBLANK(Other_Debit_Order_Issue__c)
)</errorConditionFormula>
        <errorMessage>Please specify the Other Debit Order Issue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Submitted_and_Withdrawn_Cause_Code_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    NOT(ISNEW()), 
    ISPICKVAL(Case__r.Status, &quot;In Progress&quot;),
    ISBLANK(TEXT(Submitted_Cause_Code__c)),
    ISBLANK(TEXT(Withdrawn_Cause_Code__c))
)</errorConditionFormula>
        <errorMessage>Please enter Submitted Cause Code OR Withdrawn Cause Code before saving.</errorMessage>
    </validationRules>
</CustomObject>